--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "stechstudio/filament-impersonate": "^3.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
