--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
+        "laravel/octane": "^2.9",
         "laravel/tinker": "^2.10.1",
         "stechstudio/filament-impersonate": "^3.15"
     },
