--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "codeat3/blade-fluentui-system-icons": "^1.34",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.9",
+        "itsgoingd/clockwork": "^5.3",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.9",
         "laravel/tinker": "^2.10.1",
